# aws-cloudwatch-logs-insights-mcp

./: Cargo.toml
src/: main.rs
